# logsense

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.yaml.example  docker-compose.yml  pii_rules.yaml.example  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
cli/: _types.py  anomaly_cmd.py  colors.py  demo_cmd.py  errors_cmd.py  export_cmd.py  findings_cmd.py  llm_cmd.py  main.py  opensearch_cmd.py  serve_cmd.py  tail_cmd.py
log_analyzer/: __init__.py  config.py  models.py  tail_helpers.py
log_analyzer/adapters/: base.py  opensearch.py  opensearch_config.py  stdin.py  tail.py
log_analyzer/anomaly/: baseline.py  detector.py  features.py
log_analyzer/errors/: detector.py  fingerprint.py  normalizer.py
log_analyzer/export/: markdown.py
log_analyzer/llm/: base.py  claude.py  client.py  factory.py  openai_compat.py  prompts.py  retrieval.py
log_analyzer/parsers/: base.py  detector.py  json_lines.py  nginx.py  plaintext.py  registry.py  syslog.py
log_analyzer/pii/: patterns.py  redactor.py
log_analyzer/plugins/: loader.py  registry.py
log_analyzer/rules/: engine.py  loader.py  model.py  sigma.py
log_analyzer/rules/builtin/: ssh_brute_force.yml  win_account_created.yml
log_analyzer/storage/: baseline_repo.py  dismiss_repo.py  errors_repo.py  findings_repo.py  repository.py  schema.py
log_analyzer/web/: app.py  auth.py  deps.py
log_analyzer/web/routes/: api.py  ui.py  v1.py
log_analyzer/web/templates/: base.html
log_analyzer/web/templates/partials/: llm_explain.html
logatory/: __init__.py  config.py  licensing.py  models.py  tail_helpers.py
logatory/adapters/: _http.py  docker.py  file.py  graylog.py  journald.py  loki.py  opensearch.py  ssh.py
logatory/anomaly/: detector.py
logatory/cli/: _pipeline.py  _types.py  anomaly_cmd.py  colors.py  demo_cmd.py  docker_cmd.py  errors_cmd.py  export_cmd.py  findings_cmd.py  fleet_cmd.py  graylog_cmd.py  journald_cmd.py  llm_cmd.py  loki_cmd.py  main.py  opensearch_cmd.py  serve_cmd.py  ssh_cmd.py  tail_cmd.py
logatory/errors/: tracker.py
logatory/export/: markdown.py
logatory/fleet/: __init__.py  factory.py  schema.py  targets.py
logatory/llm/: claude.py  client.py  factory.py  prompts.py  retrieval.py
logatory/parsers/: detector.py  registry.py
logatory/pii/: redactor.py
logatory/plugins/: loader.py  registry.py
logatory/rules/: __init__.py  loader.py
logatory/rules/builtin/: auth_new_uid0.yml  nginx_404_scan.yml
logatory/storage/: base.py  baseline_repo.py  dismiss_repo.py  errors_repo.py  errors_schema.py  findings_repo.py  findings_schema.py  schema.py
logatory/web/: app.py  auth.py  deps.py  fleet_config.py  fleet_targets.py
logatory/web/routes/: api.py  ui.py  v1.py
logatory/web/templates/: base.html  dashboard.html  errors.html  findings.html  fleet.html  upload.html
logatory/web/templates/partials/: errors_rows.html  fleet_fields.html  fleet_targets.html  top_rules.html  upload_results.html
logsense/: config.py  tail_helpers.py
logsense/adapters/: opensearch.py
logsense/anomaly/: baseline.py  features.py
logsense/cli/: _types.py  anomaly_cmd.py  demo_cmd.py  errors_cmd.py  export_cmd.py  findings_cmd.py  main.py  tail_cmd.py
logsense/errors/: fingerprint.py
logsense/export/: markdown.py
logsense/llm/: claude.py  openai_compat.py  prompts.py  retrieval.py
logsense/parsers/: nginx.py
logsense/pii/: patterns.py  redactor.py
logsense/plugins/: loader.py  registry.py
logsense/rules/builtin/: nginx_5xx_spike.yml  sudo_misuse.yml  win_failed_logon.yml
logsense/storage/: baseline_schema.py  dismiss_repo.py  dismiss_schema.py  errors_schema.py  findings_repo.py  findings_schema.py
logsense/web/: app.py  auth.py  deps.py
logsense/web/routes/: api.py  ui.py  v1.py
logsense/web/templates/: base.html  dashboard.html  errors.html  findings.html  upload.html
logsense/web/templates/partials/: errors_rows.html  findings_rows.html  top_rules.html  upload_results.html
plugins/: example_plugin.py
tests/: conftest.py  test_adapters.py  test_anomaly.py  test_api_v1.py  test_detector.py  test_dismiss_repo.py  test_docker.py  test_errors.py  test_errors_cmd.py  test_findings.py  test_findings_cmd.py  test_fleet.py  test_fleet_dashboard.py  test_fleet_editor.py  test_fleet_init.py  test_fleet_list.py  test_fleet_scan.py  test_fleet_tail.py  test_fleet_target.py  test_graylog.py  test_journald.py  test_licensing.py  test_llm.py  test_loki.py  test_models.py  test_opensearch.py  test_parsers.py  test_pii.py  test_plugins.py  test_rules.py  test_scan_cmd.py  test_ssh.py  test_tail.py  test_web_dashboard.py
