[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logsense"
version = "0.1.0"
description = "Local log analysis with PII redaction, threat detection, anomaly detection and LLM-powered insights"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Benjamin Fäuster", email = "benjamin.faeuster@web.de" },
]
keywords = ["logs", "log-analysis", "security", "observability", "siem", "anomaly-detection", "pii"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
]

[project.urls]
Homepage = "https://github.com/T0nd3/logsense"
Repository = "https://github.com/T0nd3/logsense"
Issues = "https://github.com/T0nd3/logsense/issues"

[project.optional-dependencies]
evtx = ["python-evtx>=0.7"]
opensearch = ["opensearch-py>=2.6"]
claude = ["anthropic>=0.40"]
embed = ["chromadb>=0.5"]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
logsense = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["logsense", "cli"]
artifacts = ["logsense/web/templates/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.envs.default]
features = ["dev"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long — formatter handles this
    "B008",   # do not perform function calls in default args (typer pattern)
    "B904",   # raise from — not always applicable
    "B905",   # zip without strict= — not always necessary
    "SIM105", # contextlib.suppress — try/except/pass is fine
    "SIM108", # ternary instead of if/else — often less readable
    "UP007",  # use X | Y for union types — keep Optional for clarity
    "UP042",  # replace str+Enum with StrEnum — minor style change
    "UP045",  # Optional[X] → X | None — keep Optional for clarity
    "RUF001", # ambiguous unicode chars in strings — intentional in demo
    "RUF003", # ambiguous unicode chars in comments — intentional section dividers
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",   # assert is fine in tests
    "SIM117", # nested with — fine in test helpers
    "RUF005", # list + list concat — readable in test arg lists
]
"cli/**" = [
    "B006",   # mutable default args — typer uses them
]
"cli/demo_cmd.py" = [
    "B007",   # unused loop vars in demo data unpacking — intentional
]
"logsense/adapters/tail.py" = [
    "SIM115", # open() without context manager — intentional (handle kept across yields)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
